Fixed shifting due to scroll bars

--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -6,7 +6,17 @@
 
 html {
 	box-sizing: border-box;
-	font-size: 62.5%;
+  font-size: 62.5%;
+  overflow: scroll;
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb{
+  background: #FF0000;
 }
 
 body {
